<resources>
    <!-- 字符串命名规范 -->
    <!--
        字符串的名称应该以一个前缀开头, 此前缀表明它们属于哪一个模块.

        如果一个字符串不属于任何模块，那么应该使用如下前缀:
            * error_    错误信息
            * msg_      常规通知信息
            * title_    标题, 例如dialog标题
            * action_   操作, 例如"保存"或"取消"
    -->

    <string name="app_name">EShop</string>

    <string name="main_home">首页</string>
    <string name="main_category">分类</string>
    <string name="main_shopping_cart">购物车</string>
    <string name="main_mine">我的</string>

    <string name="home_promote_goods">促销单品</string>
    <string name="home_title">首&#160;&#160;页</string>

    <string name="category_title">分&#160;&#160;类</string>

    <string name="search_hint">请输入要搜索的商品</string>
    <string name="search_order_is_hot">热销</string>
    <string name="search_order_price">价格</string>

    <string name="goods_title_info">商品</string>
    <string name="goods_title_details">详情</string>
    <string name="goods_title_comments">评价</string>
    <string name="goods_buy_it_now">立即购买</string>
    <string name="goods_add_to_shopping_cart">加入购物车</string>
    <string name="goods_comments">商品评价</string>
    <string name="goods_details">商品详情</string>
    <string name="goods_no_comments_available">本商品暂无评价</string>
    <string name="goods_msg_must_choose_number">请选择数量</string>
    <string name="goods_msg_add_success">添加成功</string>
    <string name="goods_inventory">库存</string>

    <string name="cart_title">购物车</string>
    <string name="cart_action_sign_in">去登陆</string>
    <string name="cart_action_summit_order">提交订单</string>
    <string name="cart_msg_is_empty">你的购物车还是空的</string>
    <string name="cart_msg_delete_goods">是否要删除此商品</string>
    <string name="cart_number">数量</string>
    <string name="cart_total_price">总额:</string>

    <string name="mine_title_sign_in">登&#160;&#160;录</string>
    <string name="mine_title_sign_up">注&#160;&#160;册</string>
    <string name="mine_hint_username">请输入用户名</string>
    <string name="mine_hint_password">请输入密码</string>
    <string name="mine_hint_email">请输入邮箱地址</string>
    <string name="mine_msg_sign_in_success">登录成功</string>
    <string name="mine_msg_sign_up_success">注册成功</string>
    <string name="mine_sign_in_or_sign_up">登录/注册</string>
    <string name="mine_action_sign_in">登录</string>
    <string name="mine_action_sign_up">注册</string>
    <string name="mine_fast_sign_up">快速注册</string>
    <string name="mine_order_wait_pay">待付款</string>
    <string name="mine_order_wait_ship">待发货</string>
    <string name="mine_order_shipped">已发货</string>
    <string name="mine_order_history">历史</string>
    <string name="mine_order_unconfirmed">待确认订单</string>
    <string name="mine_favorite">我的收藏</string>
    <string name="mine_help">帮助</string>

    <string name="address_title_add">新增地址</string>
    <string name="address_title_edit">编辑地址</string>
    <string name="address_title_manage">管理收货地址</string>
    <string name="address_consignee">收件人姓名</string>
    <string name="address_tel">手机号码</string>
    <string name="address_region">所在地区</string>
    <string name="address_detail">详细地址</string>
    <string name="address_zipcode">邮政编码</string>
    <string name="address_email">邮箱地址</string>
    <string name="address_hint_consignee">请如实填写收件人姓名</string>
    <string name="address_hint_tel">请如实填写手机号码</string>
    <string name="address_hint_region">省, 市, 区</string>
    <string name="address_hint_detail">请如实填写收件人详细地址</string>
    <string name="address_hint_zipcode">请如实填写邮政编码</string>
    <string name="address_hint_email">请如实填写收件人邮箱</string>
    <string name="address_msg_add_success">添加成功</string>
    <string name="address_msg_edit_success">编辑成功</string>
    <string name="address_choose_province">选择省份</string>
    <string name="address_choose_city">选择城市</string>
    <string name="address_choose_district">选择地区</string>
    <string name="address_action_save_and_use">保存并使用</string>
    <string name="address_action_set_default">设为默认</string>
    <string name="address_action_create">添加收货地址</string>
    <string name="address_msg_can_not_delete_default">不能删除默认地址</string>

    <string name="order_title_preview">确认订单</string>
    <string name="order_title_wait_pay">待付款订单</string>
    <string name="order_title_wait_ship">待发货订单</string>
    <string name="order_title_shipped">已发货订单</string>
    <string name="order_title_history">历史订单</string>
    <string name="order_title_unconfirmed">待确认订单</string>
    <string name="order_choose_payment">选择支付方式</string>
    <string name="order_choose_shipping">选择派送方式</string>
    <string name="order_consignee_name">收件人: %s</string>
    <string name="order_goods_amount">数量: %s</string>
    <string name="order_payment">支付方式</string>
    <string name="order_shipping">派送方式</string>
    <string name="order_payment_name">支付方式 (%s)</string>
    <string name="order_shipping_name">派送方式 (%s)</string>
    <string name="order_goods_price">商品总额: %s</string>
    <string name="order_shipping_price">运费金额: %s</string>
    <string name="order_msg_purchase_now">订单已生成, 是否现在支付?</string>
    <string name="order_sn">订单编号: %s</string>
    <string name="order_time">下单时间: %s</string>
    <string name="order_total">总额: %s</string>
    <string name="order_action_purchase">支付</string>
    <string name="order_is_canceled">订单已取消</string>

    <string name="collect_title">收藏列表</string>
    <string name="collect_msg_already_collected">本商品已收藏</string>
    <string name="collect_grid">网格</string>
    <string name="collect_list">列表</string>
    <string name="collect_msg_confirm_delete">是否取消收藏?</string>
    <string name="collect_msg_delete_success">该收藏记录已删除</string>

    <string name="settings_title">设&#160;&#160;置</string>
    <string name="settings_action_sign_out">退出账号</string>
    <string name="settings_category_app">应用设置</string>
    <string name="settings_category_about">关于我们</string>
    <string name="settings_pref_auto_signin">自动登录</string>
    <string name="settings_pref_not_exit">退出时最小化</string>
    <string name="settings_pref_show_full_picture">显示高清图</string>
    <string name="settings_pref_official_website">浏览官网</string>
    <string name="settings_pref_custom_service_tel">客服电话</string>

    <string name="action_share">分享</string>
    <string name="action_confirm">确认</string>
    <string name="action_cancel">取消</string>
    <string name="action_edit">编辑</string>
    <string name="action_delete">删除</string>
    <string name="action_submit">提交</string>
    <string name="action_search">搜索</string>

    <string name="msg_load_more_complete">没有更多了…</string>
    <string name="msg_wait">请稍后…</string>

    <string name="error_network">网络错误, 请检查网络设置</string>

</resources>
