<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:elevation="@dimen/elevation_app_bar">
    <androidx.appcompat.widget.Toolbar
        android:id="@id/standard_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_45"
        android:background="@color/colorPrimary"
        app:theme="@style/Widget.AppCompat.Toolbar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/text_tab_goods"
                style="@style/GoodsTabTextView"
                android:text="@string/goods_title_info"/>

            <TextView
                android:id="@+id/text_tab_details"
                style="@style/GoodsTabTextView"
                android:text="@string/goods_title_details"/>

            <TextView
                android:id="@+id/text_tab_comments"
                style="@style/GoodsTabTextView"
                android:text="@string/goods_title_comments"/>
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>