<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    tools:context="com.gfd.eshop.feature.cart.CartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/partial_mine_top" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/horizontal_bar_bg">

            <TextView
                android:id="@+id/text_order_unconfirmed"
                style="@style/HorizontalItemTextView"
                android:drawableLeft="@drawable/ic_order_unconfirmed"
                android:gravity="center_vertical"
                android:text="@string/mine_order_unconfirmed" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_80"
            android:layout_marginTop="@dimen/spacing_small"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/text_wait_pay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_order_wait_pay"
                    android:gravity="center"
                    android:padding="@dimen/spacing_tiny"
                    android:text="@string/mine_order_wait_pay"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/font_normal" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/text_wait_ship"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_order_wait_ship"
                    android:gravity="center"
                    android:padding="@dimen/spacing_tiny"
                    android:text="@string/mine_order_wait_ship"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/font_normal" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/text_shipped"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_order_shipped"
                    android:gravity="center"
                    android:padding="@dimen/spacing_tiny"
                    android:text="@string/mine_order_shipped"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/font_normal" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/text_history"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableTop="@drawable/ic_order_history"
                    android:gravity="center"
                    android:padding="@dimen/spacing_tiny"
                    android:text="@string/mine_order_history"
                    android:textColor="@color/gray_dark"
                    android:textSize="@dimen/font_normal" />
            </FrameLayout>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:background="@drawable/horizontal_bar_bg">

            <TextView
                android:id="@+id/text_favorite"
                style="@style/HorizontalItemTextView"
                android:drawableLeft="@drawable/ic_favorite"
                android:gravity="center_vertical"
                android:text="@string/mine_favorite" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:background="@drawable/horizontal_bar_bg">

            <TextView
                android:id="@+id/text_manage_address"
                style="@style/HorizontalItemTextView"
                android:drawableLeft="@drawable/ic_address"
                android:gravity="center_vertical"
                android:text="@string/address_title_manage" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_tiny"
            android:background="@drawable/horizontal_bar_bg">

            <TextView
                android:id="@+id/text_help"
                style="@style/HorizontalItemTextView"
                android:drawableLeft="@drawable/ic_help"
                android:gravity="center_vertical"
                android:text="@string/mine_help" />
        </FrameLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
