<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_address_info1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54"
        android:layout_gravity="center_vertical"
        android:background="@android:color/white"
        android:ellipsize="end"
        android:lines="1"
        android:padding="@dimen/spacing_normal"
        android:textAppearance="@style/ContentText.Large"/>

    <TextView
        android:id="@+id/text_address_info2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54"
        android:background="@android:color/white"
        android:ellipsize="end"
        android:lines="1"
        android:padding="@dimen/spacing_normal"
        android:textAppearance="@style/ContentText.Large"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/gray_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_54"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_set_default"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:drawableLeft="@drawable/selector_address_dot"
            android:drawablePadding="@dimen/spacing_small"
            android:gravity="center_vertical"
            android:padding="@dimen/spacing_normal"
            android:text="@string/address_action_set_default"
            android:textAppearance="@style/ContentText.Normal"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="@color/gray_light"/>

        <TextView
            android:id="@+id/text_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_edit"
            android:drawablePadding="@dimen/spacing_tiny"
            android:gravity="center_vertical"
            android:padding="@dimen/spacing_normal"
            android:text="@string/action_edit"
            android:textAppearance="@style/ContentText.Normal"/>

        <TextView
            android:id="@+id/text_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_delete"
            android:drawablePadding="@dimen/spacing_tiny"
            android:gravity="center_vertical"
            android:padding="@dimen/spacing_normal"
            android:text="@string/action_delete"
            android:textAppearance="@style/ContentText.Normal"/>
    </LinearLayout>

    <View
        android:layout_width="1px"
        android:layout_height="match_parent"
        android:background="@color/gray_light"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_tiny"/>

</LinearLayout>